load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(
    default_visibility = ["//visibility:public"],
)

java_proto_library(
    name = "semanticdb_java_proto",
    deps = [":semanticdb_proto"],
)

proto_library(
    name = "semanticdb_proto",
    srcs = glob(["src/main/protobuf/*.proto"]),
)

kt_jvm_library(
    name = "semanticdb-kotlin",
    srcs = glob(["src/main/java/**/*.kt"]) + glob(["src/main/java/**/*.java"]),
    deps = [
        ":semanticdb_java_proto",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)
